add plugin of java 1.8